--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,14 @@
+
 {
   "name": "Falls Assessment Tool",
-  "short_name": "FallsAssess",
-  "start_url": "./index.html",
+  "short_name": "Falls Tool",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#e8fef1",
-  "theme_color": "#00703c",
-  "description": "A falls assessment tool for Front Line Staff.",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#ffffff",
+  "description": "Offline-capable app to assess fall patients on scene.",
+  "icons": [{
+    "src": "/icon-192.png",
+    "type": "image/png",
+    "sizes": "192x192"
+  }]
 }
