--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,20 @@
-
 {
   "name": "Falls Assessment Tool",
-  "short_name": "Falls Tool",
-  "start_url": ".",
+  "short_name": "FallsAssess",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "description": "Offline-capable app to assess fall patients on scene.",
-  "icons": [{
-    "src": "/icon-192.png",
-    "type": "image/png",
-    "sizes": "192x192"
-  }]
+  "background_color": "#00703c",
+  "theme_color": "#00703c",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
