--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#e8fef1",
   "theme_color": "#00703c",
-  "description": "A falls assessment tool for Front Line Staff.",
+  "description": "A clinical-grade falls assessment app for SECamb CFRs and frontline responders.",
   "icons": [
     {
       "src": "icon-192.png",
