--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Falls Assessment Tool",
-  "short_name": "FallsAssess",
+  "short_name": "FallsApp",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#e8fef1",
+  "background_color": "#ffffff",
   "theme_color": "#00703c",
-  "description": "A falls assessment tool for Front Line Staff.",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/cfr_toolbox_icon_192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "icons/cfr_toolbox_icon_512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
