--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,20 @@
 {
-  "name": "Final manifest content"
+  "name": "SECamb CFR Falls Assessment",
+  "short_name": "Falls Tool",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#007f3b",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
